--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+attrs==23.1.0
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
@@ -9,7 +10,11 @@ dj-rest-auth==4.0.1
 Django==4.2.3
 django-allauth==0.54.0
 djangorestframework==3.14.0
+drf-spectacular==0.26.4
 idna==3.4
+inflection==0.5.1
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
 oauthlib==3.2.2
 psycopg2-binary==2.9.6
 pycparser==2.21
@@ -17,9 +22,12 @@ PyJWT==2.8.0
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
+PyYAML==6.0.1
+referencing==0.30.2
 requests==2.31.0
 requests-oauthlib==1.3.1
+rpds-py==0.9.2
 sqlparse==0.4.4
 typing_extensions==4.7.1
+uritemplate==4.1.1
 urllib3==2.0.4
-drf-spectacular==0.16.0
