add cors headers automatically

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dj-database-url==2.0.0
 dj-rest-auth==4.0.1
 Django==4.2.3
 django-allauth==0.54.0
+django-cors-headers==4.2.0
 djangorestframework==3.14.0
 drf-spectacular==0.26.4
 gunicorn==21.2.0
