--- a/requirements.txt
+++ b/requirements.txt
@@ -30,4 +30,5 @@ rpds-py==0.9.2
 sqlparse==0.4.4
 typing_extensions==4.7.1
 uritemplate==4.1.1
-urllib3==2.0.4
+urllib3==1.26.16
+cloudinary==1.34.0
